linked_css_and_js_to_html_page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week 11 Lab</title>
+  <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+  <script src="app.js"></script>
   <div class="container">
     <label for="word">word 4-10 characters:</label>
     <input type="text" id="word" name="word" required minlength="4" maxlength="10" size="12">
